conf/heimdall/heimdall-deployment-raspi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: heimdall
  labels:
    app: heimdall

spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: heimdall
        version: v2.7.4
    spec:
      containers:
        - name: heimdall
          image: lscr.io/linuxserver/heimdall:2.7.4
          ports:
            - containerPort: 80
              name: heimdall-http
          volumeMounts:
            - mountPath: /config/
              name: heimdall-persistent-storage
          # livenessProbe:
          #   httpGet:
          #     path: /healthcheck
          #     port: heimdall-http
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: heimdall-persistent-storage
          persistentVolumeClaim:
            claimName: heimdall-persistent-claim
