conf/heimdall/heimdall-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall

spec:
  ports:
  - name: heimdall-http
    protocol: TCP
    port: 80
  selector:
    app: heimdall
