conf/heimdall/heimdall-ingress-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-heimdall
  # namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`hl.idcrook.dev`)
      services:
        - name: heimdall
          port: 80
      middlewares:
        - name: redirect-to-https

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-heimdall

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hl.idcrook.dev`)
      services:
        - name: heimdall
          port: 80
      middlewares:
#        - name: kube-system-my-traefik-auth-with-exceptions@kubernetescrd
        - name: tinyauth-tinyauth-middleware@kubernetescrd # tinyauth-middleware
  tls:
    certResolver: wildcardresolver
